fix: visibility of event desc

--- a/src/pages/EventDescription/EventDescription.module.css
+++ b/src/pages/EventDescription/EventDescription.module.css
@@ -104,7 +104,6 @@
   padding-left: 3rem;
   background-color: #00000086;
   border-radius: 12px;
-  backdrop-filter: blur(59px);
   box-shadow: 0 0 50px rgb(0, 0, 0);
 
 
